feat(): Integrate GORM DB, migrations and convert repos
